--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "deploy": "PATH_PREFIX=/vridhi-portfolio gatsby build && gh-pages -d public"
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
