--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "v4",
   "description": "Personal Website V4",
   "version": "1.0.0",
+  "homepage": "https://vridhij.github.io",
   "author": "Brittany Chiang <brittany.chiang@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/VridhiJ/vridhij.github.io"
   },
   "keywords": [
     "gatsby"
@@ -21,7 +22,7 @@
     "clean": "gatsby clean",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "deploy": "PATH_PREFIX=/vridhi-portfolio gatsby build && gh-pages -d public"
+    "deploy": "gatsby build && gh-pages -d public"
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
