--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Brittany Chiang <brittany.chiang@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/VridhiJ/vridhi.github.io"
+    "url": "https://github.com/VridhiJ/vridhij.github.io"
   },
   "keywords": [
     "gatsby"
